--- a/app/templates/owner/dashboard.html.twig
+++ b/app/templates/owner/dashboard.html.twig
@@ -4,10 +4,10 @@
 {% block body %}
   <section class="section">
     <div class="container">
-      <h2>Dashboard</h2>
+      <h2 class="title is-2">Dashboard</h2>
       <p>Bienvenue <strong>{{ app.user.username }} </strong></p>
-        <ul>            
         {% if mainIncinerateur %}
+        <ul>            
             <li>
                 <p><strong>{{ mainIncinerateur.name }}</strong>, possède
                 {{ mainIncinerateur.nbLignes }} lignes</p>
@@ -15,45 +15,46 @@
                   la ligne n°{{ ligne.numero }} a {{ ligne.nbFours }} fours<br/>
                 {% endfor %}
             </li>
+        </ul>
         {% else %}
             <p>Pas d'incinéraeur associé</p>
         {% endif %}
-        </ul>
 
-      <h1>TODO: ajout de graphes</h1>
-
-    {% for ligne in mainIncinerateur.lignes %}
-      <div style="width: 75%;">
-        <canvas id="canvas_dioxine_{{ligne.numero}}"></canvas>
-      </div>              
-
-    {% endfor %}
+      {% if mainIncinerateur %}
+      <h3 class="title is-3">Synthèse des déclarations de dioxines</h3>
+        {% for ligne in mainIncinerateur.lignes %}
+          <div style="width: 75%;">
+            <h4 class="title is-4">Ligne n°{{ ligne.numero }}</h4>
+            <canvas id="canvas_dioxine_{{ligne.numero}}"></canvas>
+          </div>              
+        {% endfor %}
+      {% endif %}
 
 
 <script src="{{ asset('build/app.js') }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.5/chartjs-plugin-annotation.js"></script>
 <script src="https://cdn.rawgit.com/chartjs/Chart.js/master/samples/utils.js"></script>
-
+  
 <script>
     var dashboardData = {{ output|json_encode()|raw }}
     
-    window.onload = function() {
+    function addChart(ligneId) {
       var color = Chart.helpers.color;
       var barChartData = {
         labels: dashboardData.months,
         datasets: [{
-          label: 'Ligne 1',
+          label: 'Ligne n°' + ligneId,
           backgroundColor: color('rgba(255, 99, 132, 0.2)').alpha(0.5).rgbString(),
           borderColor: 'rgba(255, 99, 132, 0.2)',
           borderWidth: 1,
-          data: dashboardData.lines[1]
+          data: dashboardData.lines[ligneId]
         }]
 
       };
 
-      var ctx = document.getElementById('canvas_dioxine_1').getContext('2d');
-      window.myBar = new Chart(ctx, {
+      var ctx = document.getElementById('canvas_dioxine_' + ligneId).getContext('2d');
+      new Chart(ctx, {
         type: 'bar',
         data: barChartData,
         options: {
@@ -68,7 +69,13 @@
           scales: {
               yAxes: [{
                   ticks: {
-                      beginAtZero:true
+                      beginAtZero:true,
+                      suggestedMax: 0.11,
+                  },
+                  scaleLabel:{
+                    display:true,
+                      labelString: "Concentration (nb/m^3)"
+
                   }
               }]
           },
@@ -90,6 +97,14 @@
           }
         }
       });
+    }
+
+
+
+    window.onload = function() {
+      addChart(1)
+      addChart(2)
+
     };
 
   </script>
