--- a/app/templates/static/homepage.html.twig
+++ b/app/templates/static/homepage.html.twig
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <section class="section-dark" id="aeris-what">
+  <section class="section-dark" id="aeris-quoi">
     <div class="container">
       <h2 class="section__title">Aeris, c'est quoi ?</h2>
       <div class="row">
@@ -18,7 +18,19 @@
     </div>
   </section>
 
-  <section id="aeris-about">
+  <section id="aeris-color" style="background-color: #e8b00b">
+    <div class="container">
+      <h2 class="section__title">Simplifiez votre déclaration!</h2> 
+      <p class="section__subtitle">
+        Effectuez en ligne vos déclarations de rejets dans l'air et vos émissions de dioxines.
+      </p>
+      <p style="text-align:center">
+                <a data-fancybox="gallery" href="{{ asset('build/static/images/declaration-dioxine.png')}}">      <img src="{{ asset('build/static/images/declaration-dioxine-small.png')}}" /></a>
+      </p>
+    </div>
+  </section>
+
+  <section id="aeris-apropos">
     <div class="container">
     <article>
       <h2 class="section__title">A propos</h2>
