better color code for the barchart

--- a/app/templates/owner/dashboard.html.twig
+++ b/app/templates/owner/dashboard.html.twig
@@ -45,8 +45,8 @@
         labels: dashboardData.months,
         datasets: [{
           label: 'Ligne n°' + ligneId,
-          backgroundColor: color('rgba(255, 99, 132, 0.2)').alpha(0.5).rgbString(),
-          borderColor: 'rgba(255, 99, 132, 0.2)',
+          backgroundColor: color('#207245').alpha(0.5).rgbString(),
+          borderColor: '#558F6E',
           borderWidth: 1,
           data: dashboardData.lines[ligneId]
         }]
