minor visual changes

--- a/app/templates/inspecteur/liste-incinerateurs.html.twig
+++ b/app/templates/inspecteur/liste-incinerateurs.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
   <section class="section">
     <div class="container">
-      <h2>Les incinérateurs</h2>
+      <h2 class="title is-2">Incinérateurs</h2>
 
       <table class="table">
           <thead>
