--- a/app/templates/user/compte-rendu-declaration.html.twig
+++ b/app/templates/user/compte-rendu-declaration.html.twig
@@ -98,7 +98,7 @@
                   </tr>
                   <tr>
                     <td>Concentration en dioxines </td>
-                    <td>{{ mesureDioxine.concentration }}</td>
+                    <td style="background-color:#C7DBD0">{{ mesureDioxine.concentration }}</td>
                   </tr>
                   <tr>
                     <td>Remarques</td>
