--- a/app/templates/inspecteur/dashboard.html.twig
+++ b/app/templates/inspecteur/dashboard.html.twig
@@ -2,11 +2,8 @@
 {% block body %}
   <section class="section">
     <div class="container">
-      <h2>Dashboard</h2>
+      <h2 class="title is-2">Tableau de bord</h2>
       <p>Bienvenue <strong>{{ app.user.username }} </strong></p>
-      <p>Tableau de bord inspecteur</p>
-
-      <h1>TODO: ajout de graphes</h1>
     </div>
   </section>
 {% endblock %}
