--- a/app/templates/owner/dashboard.html.twig
+++ b/app/templates/owner/dashboard.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
   <section class="section">
     <div class="container">
-      <h2 class="title is-2">Dashboard</h2>
+      <h2 class="title is-2">Tableau de bord</h2>
       <p>Bienvenue <strong>{{ app.user.username }} </strong></p>
         {% if mainIncinerateur %}
         <ul>            
