--- a/app/templates/common/base.html.twig
+++ b/app/templates/common/base.html.twig
@@ -34,5 +34,6 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.1/jquery.fancybox.min.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.1/jquery.fancybox.min.js"></script>
+        {% include 'common/piwik.html.twig' %}
     </body>
 </html>
