--- a/app/templates/common/base_inside.html.twig
+++ b/app/templates/common/base_inside.html.twig
@@ -18,6 +18,7 @@
   
     {% block body %}{% endblock %}
     {% block javascripts %}{% endblock %}
+    {% include 'common/piwik.html.twig' %}
   </body>
 </html>
 
