--- a/app/templates/common/base_inside.html.twig
+++ b/app/templates/common/base_inside.html.twig
@@ -8,6 +8,7 @@
     {% block stylesheets %}
     {% endblock %}
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="{{ asset('build/static/favicons/android-chrome-192x192.png') }}" />
   </head>
   <body>
   <section class="navigation">
