--- a/app/templates/user/compte-rendu-declaration.html.twig
+++ b/app/templates/user/compte-rendu-declaration.html.twig
@@ -52,11 +52,11 @@
               <table class="table">
                 <tbody>
                   <tr>
-                    <td>Nombre d'heures de fonctionnement théorique</td>
+                    <td>Nombre d'heures de fonctionnement théoriques</td>
                     <td>{{ declarationLigne.nbHeuresFonctionnementTh }}</td>
                   </tr>
                   <tr>
-                    <td>Nombre d'heures de fonctionnement réel</td>
+                    <td>Nombre d'heures de fonctionnement réelles</td>
                     <td>{{ declarationLigne.nbHeuresFonctionnementReel }}</td>
                   </tr>
                 </tbody>
@@ -97,7 +97,8 @@
                     <td>{{ mesureDioxine.disponibiliteAnalyseur }}</td>
                   </tr>
                   <tr>
-                    <td>Concentration en dioxines </td>
+                    <td>Concentration des PCDD/PCDF<br/>
+                    (ng NATO I-TEQ/Nm<sup>3</sup> à O<sub>2réf</sub> sur gaz sec)</td>
                     <td style="background-color:#C7DBD0">{{ mesureDioxine.concentration }}</td>
                   </tr>
                   <tr>
