--- a/app/templates/common/menu.html.twig
+++ b/app/templates/common/menu.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <h1 class="title"><a class="navbar-item" href="{{ path('route_dashboard') }}">Aeris</a></h1>
+    <h1 class="title"><a class="navbar-item" href="{{ path('route_dashboard') }}"><img class="nav__logo" src="{{ asset('build/static/logo/logo-aeris.png') }}" alt="Accueil d'Aeris"></a></h1>
   </div>
 
   <div class="navbar-menu">
