Added a dashboard for the inspecteur

--- a/app/templates/inspecteur/liste-incinerateurs.html.twig
+++ b/app/templates/inspecteur/liste-incinerateurs.html.twig
@@ -14,7 +14,7 @@
           <tbody>
             {% for incinerateur in incinerateurs %}
             <tr>
-              <th><a href="{{ path('route_history', {incinerateurId: incinerateur.id }) }}">{{ incinerateur.name }}</a></th>
+              <th><a href="{{ path('route_dashboard_incinerateur', {incinerateurId: incinerateur.id }) }}">{{ incinerateur.name }}</a></th>
               <td>
                 <a class="button" href="{{ path('route_history', {incinerateurId: incinerateur.id }) }}">Accéder</a>
               </td>
