--- a/app/templates/inspecteur/dashboard-incinerateur.html.twig
+++ b/app/templates/inspecteur/dashboard-incinerateur.html.twig
@@ -2,10 +2,13 @@
 {% block body %}
   <section class="section">
     <div class="container">
-       <a class="button is-primary" style="float:right" href="{{ path('route_history', {incinerateurId: incinerateur.id }) }}">Accéder à l'historique de {{ incinerateur.name }}</a>
-      <h2 class="title is-2">Tableau de bord</h2>
+       <a class="button is-primary" style="float:right; font-size:1.5em" href="{{ path('route_history', {incinerateurId: incinerateur.id }) }}">Accéder à l'historique des déclarations</a>
+
+      <h2 class="title is-2">Tableau de bord de <strong>{{incinerateur.name}}</strong></h2>
 
             {% include "common/dashboard-incinerateur.html.twig" with {'incinerateur' : incinerateur} %}
+
+       <a class="button is-primary" style="float:right; font-size:1.5em" href="{{ path('route_history', {incinerateurId: incinerateur.id }) }}">Accéder à l'historique des déclarations</a>
 
     </div>
   </section>
