--- a/app/templates/user/historique.html.twig
+++ b/app/templates/user/historique.html.twig
@@ -8,7 +8,7 @@ Votre déclaration a bien été prise en compte. Vous pouvez y accéder <a href=
           </div>
       {% endfor %}
 
-      <h2>Historique de déclarations de <strong>{{incinerateur.name}}</strong></h2>
+      <h2 class="title is-2">Historique de déclarations de <strong>{{incinerateur.name}}</strong></h2>
 
       <table class="table">
           <thead>
