added wip dates

--- a/app/templates/owner/declaration.html.twig
+++ b/app/templates/owner/declaration.html.twig
@@ -17,7 +17,11 @@
         <table class="table">
           <tbody>
             <tr>
+
               <td>Mois de déclaration</td>
+              <style type="text/css">#declaration_incinerateur_declarationMonth_day {
+                display:none;
+                }</style>
               <td>{{ form_widget(form.declarationMonth) }}</td>
               <td>{{ form_errors(form.declarationMonth) }}</td>
             </tr>
