--- a/app/templates/common/dashboard-incinerateur.html.twig
+++ b/app/templates/common/dashboard-incinerateur.html.twig
@@ -75,8 +75,9 @@ function addChart(ligneId) {
 }
 
 window.onload = function() {
-  addChart(1)
-  addChart(2)
+{% for ligne in incinerateur.lignes %}
+  addChart({{ ligne.numero }})
+{% endfor %}
 };
 
 </script>
