working upload+download

--- a/app/templates/user/compte-rendu-declaration.html.twig
+++ b/app/templates/user/compte-rendu-declaration.html.twig
@@ -115,6 +115,10 @@
 
           {% endfor %}
         {% endif %}
+
+        <h3 class="title is-3">Declaration des mesures continues</h3>
+
+        <a href="{{ vich_uploader_asset(declaration, 'declarationFile') }}" alt="" >Télécharger</a>
     </div>
 
     </div>
