--- a/app/templates/owner/declaration.html.twig
+++ b/app/templates/owner/declaration.html.twig
@@ -11,127 +11,13 @@
 {% block body %}
   <section class="section">
     <div class="container">
-        <h2 class="title is-2">Effectuer une déclaration mensuelle</h2>
-        {{ form_start(form) }}
+        <h2 class="title is-2">Effectuer une déclaration</h2>
+        
+        <ul>
+          <li><a href="{{ path('route_declaration_dioxines') }}">déclaration de dioxines</a></li>
+          <li><a href="{{ path('route_declaration_mesures_continues') }}">déclaration de mesures continues</a></li>
+        </ul>
 
-        <table class="table">
-          <tbody>
-            <tr>
-
-              <td>Mois de déclaration</td>
-              <style type="text/css">#declaration_incinerateur_declarationMonth_day {
-                display:none;
-                }</style>
-              <td>{{ form_widget(form.declarationMonth) }}</td>
-              <td>{{ form_errors(form.declarationMonth) }}</td>
-            </tr>
-          </tbody>
-        </table>
-
-        <h3 class="title is-3">Volume de déchets incinérés</h3>
-        <div class="recap-declaration-dechets">
-            <ul>
-                <li>
-                {{ form_widget(form.declarationDechets.qtiteIncinereeTotale) }} T de déchets incinérés, dont:
-
-                <ul>
-                    <li>{{ form_widget(form.declarationDechets.qtiteIncinereeDechetsDasri) }}T DASRI</li>
-                    <li>{{ form_widget(form.declarationDechets.qtiteIncinereeDechetsDangereux) }}T de déchets dangereux</li>
-                    <li>{{ form_widget(form.declarationDechets.qtiteIncinereeDechetsNonDangereux) }}T de déchets non dangereux, dont
-                        <ul>
-                            <li>{{ form_widget(form.declarationDechets.qtiteIncinereeDechetsNonDangereuxMenagers) }}T de déchets ménagers
-                            </li>
-                            <li>{{ form_widget(form.declarationDechets.qtiteIncinereeDechetsNonDangereuxRefusTri) }}T de refus de tri
-                            </li>
-                            <li>{{ form_widget(form.declarationDechets.qtiteIncinereeDechetsNonDangereuxDae) }}T de déchets DAE non dangereux</li>
-                        </ul>
-                    </li>
-                </ul>
-                </li>
-            </ul>
-        </div>
-
-
-
-        <h3 class="title is-3">Declaration générale de fonctionnement</h3>
-        {% for fonctionnementLigne in form.declarationsFonctionnementLigne %}
-
-            <h4 class="title is-4">Ligne n°{{ fonctionnementLigne.vars['value'].ligne.numero }}</h4>
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td>Nombre d'heures de fonctionnement théoriques</td>
-                  <td>{{ form_widget(fonctionnementLigne.nbHeuresFonctionnementTh) }}</td>
-                  <td>{{ form_errors(fonctionnementLigne.nbHeuresFonctionnementTh) }}</td>
-                </tr>
-                <tr>
-                  <td>Nombre d'heures de fonctionnement réelles</td>
-                  <td>{{ form_widget(fonctionnementLigne.nbHeuresFonctionnementReel) }}</td>
-                  <td>{{ form_errors(fonctionnementLigne.nbHeuresFonctionnementReel) }}</td>
-                </tr>
-              </tbody>
-            </table>
-        {% endfor %}
-
-
-        <h3 class="title is-3">Declaration dioxines</h3>
-        {% for mesureDioxine in form.mesuresDioxine %}
-
-            <h4 class="title is-4">Ligne n°{{ mesureDioxine.vars['value'].ligne.numero }}</h4>
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td>Nom du laboratoire</td>
-                  <td>{{ form_widget(mesureDioxine.nomLaboratoire) }}</td>
-                  <td>{{ form_errors(mesureDioxine.nomLaboratoire) }}</td>
-                </tr>
-                <tr>
-                  <td>Date de début des mesures</td>
-                  <td>{{ form_widget(mesureDioxine.dateDebut) }}</td>
-                  <td>{{ form_errors(mesureDioxine.dateDebut) }}</td>
-                </tr>
-                <tr>
-                  <td>Date de fin des mesures</td>
-                  <td>{{ form_widget(mesureDioxine.dateFin) }}</td>
-                  <td>{{ form_errors(mesureDioxine.dateFin) }}</td>
-                </tr>
-                <tr>
-                  <td>Disponibilité de la ligne sur la période (%) </td>
-                  <td>{{ form_widget(mesureDioxine.disponibiliteLigne) }}</td>
-                  <td>{{ form_errors(mesureDioxine.disponibiliteLigne) }}</td>
-                </tr>
-                <tr>
-                  <td>Disponibilité de l'analyseur sur la période (%) </td>
-                  <td>{{ form_widget(mesureDioxine.disponibiliteAnalyseur) }}</td>
-                  <td>{{ form_errors(mesureDioxine.disponibiliteAnalyseur) }}</td>
-                </tr>
-                <tr>
-                  <td>Concentration des PCDD/PCDF<br/>
-                    (ng NATO I-TEQ/Nm<sup>3</sup> à O<sub>2réf</sub> sur gaz sec)
-                  </td>
-                  <td>{{ form_widget(mesureDioxine.concentration) }}</td>
-                  <td>{{ form_errors(mesureDioxine.concentration) }}</td>
-                </tr>
-                <tr>
-                  <td>Remarques</td>
-                  <td>{{ form_widget(mesureDioxine.commentaire) }}</td>
-                  <td>{{ form_errors(mesureDioxine.commentaire) }}</td>
-                </tr>
-              </tbody>
-            </table>
-
-        {% endfor %}
-
-        <h3 class="title is-3">Declaration de mesures continues</h3>
-        <p>
-
-        <a href="{{ url('route_download_template') }}" class="button is-primary">Téléchargez un modèle de déclaration</a> puis renvoyez ce document complété: {{ form_widget(form.declarationFile) }}<br/>
-        </p>
-        <h3 class="title is-3">Remarques</h3>
-        {{ form_widget(form.comment) }}<br/>
-
-        <input type="submit" value="Déclarer !" class="button is-primary"/>
-        {{ form_end(form) }}
     </div>
   </section>
 {% endblock %}
