--- a/app/templates/user/historique.html.twig
+++ b/app/templates/user/historique.html.twig
@@ -41,7 +41,9 @@ Votre déclaration a bien été prise en compte. Vous pouvez y accéder <a href=
           </tbody>
       </table>
 
-            <table class="table">
+      <h3 class="title is-3">Dioxines</h3>
+
+      <table class="table">
           <thead>
             <tr>
               <th>Déclaration</th>
