--- a/app/templates/owner/declaration-dioxines.html.twig
+++ b/app/templates/owner/declaration-dioxines.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
   <section class="section">
     <div class="container">
-        <h2 class="title is-2">Effectuer une déclaration dioxines</h2>
+        <h2 class="title is-2">Déclaration de dioxines et furannes</h2>
         {{ form_start(form) }}
 
 
