--- a/app/templates/owner/declaration-mesures-continues.html.twig
+++ b/app/templates/owner/declaration-mesures-continues.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
   <section class="section">
     <div class="container">
-        <h2 class="title is-2">Effectuer une déclaration mensuelle</h2>
+        <h2 class="title is-2">Déclaration mensuelle de mesures continues</h2>
         {{ form_start(form) }}
 
         <table class="table">
