Added missing fields

--- a/app/templates/owner/declaration-dioxines.html.twig
+++ b/app/templates/owner/declaration-dioxines.html.twig
@@ -27,6 +27,11 @@
                   <td>{{ form_errors(mesureDioxine.nomLaboratoire) }}</td>
                 </tr>
                 <tr>
+                  <td>Numéro de cartouche</td>
+                  <td>{{ form_widget(mesureDioxine.numeroCartouche) }}</td>
+                  <td>{{ form_errors(mesureDioxine.numeroCartouche) }}</td>
+                </tr>
+                <tr>
                   <td>Date de début des mesures</td>
                   <td>{{ form_widget(mesureDioxine.dateDebut) }}</td>
                   <td>{{ form_errors(mesureDioxine.dateDebut) }}</td>
