--- a/app/templates/owner/declaration.html.twig
+++ b/app/templates/owner/declaration.html.twig
@@ -1,16 +1,15 @@
 {% extends "common/base_inside.html.twig" %}
 {% block stylesheets %}
 <style type="text/css">
-.title {
+
+.declaration-title {
   text-align: center;
-  padding-bottom: 2em;
+  padding-bottom: 1em;
 }
+
 .recap-declaration-dechets ul {
     list-style: square;
     padding-left: 2em;
-}
-.declaration-cta {
-
 }
 .columns {
   margin-left: 25%;
@@ -25,7 +24,7 @@
 {% block body %}
   <section class="section">
     <div class="container">
-      <h2 class="title is-2">Commencez votre déclaration mensuelle</h2>
+      <h2 class="title declaration-title is-2">Commencez votre déclaration mensuelle</h2>
 
       <div class="columns">
         <div class="column">
