--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -20,3 +20,15 @@
     margin-top: 10px;
     border-radius: 3px;
 }
+
+
+.container{
+  margin-top:1em;
+}
+.is-active {
+  background-color: #3273dc;
+}
+.is-active a {
+  color:white;
+  font-weight:bold;
+}
