--- a/app/templates/owner/declaration-mesures-continues.html.twig
+++ b/app/templates/owner/declaration-mesures-continues.html.twig
@@ -2,17 +2,26 @@
 {% block stylesheets %}
 <style type="text/css">
 
-.recap-declaration-dechets ul {
+.recap-declaration-dechets ul, .declaration-mesures-continues ul {
     list-style: square;
     padding-left: 2em;
 }
     </style>
+
+<link rel="stylesheets" type="text/css" href="{{ asset('build/static/css/dropzone.css') }}" />
+<script type="text/javascript" src="{{ asset('build/static/js/dropzone.js') }}"></script>
+<script type="text/javascript">
+Dropzone.options.declarationUpload = {
+//Dropzone.options.declaration_incinerateur_declarationFile_file = {
+  paramName: "declaration_incinerateur[declarationFile][file]"
+};
+</script>
 {% endblock %}
 {% block body %}
   <section class="section">
-    <div class="container">
+    <div class="container declaration-mesures-continues">
         <h2 class="title is-2">Déclaration mensuelle de mesures continues</h2>
-        {{ form_start(form) }}
+        {{ form_start(form, {'attr': {'class':'dropzone', 'id': "declaration-upload"}}) }}
 
         <table class="table">
           <tbody>
@@ -75,10 +84,41 @@
 
 
         <h3 class="title is-3">Declaration de mesures continues</h3>
-        <p>
 
-        <a href="{{ url('route_download_template') }}" class="button is-primary">Téléchargez un modèle de déclaration</a> puis renvoyez ce document complété: {{ form_widget(form.declarationFile) }}<br/>
+        <p>
+          Le détail des données à envoyer est indiqué dans chaque modèle de fichier.
         </p>
+        <p></p>
+          Vous pouvez déclarer : 
+          <ul>
+            <li>En remplissant nos modèles de fichiers, et en les chargeant sur le site</li>
+            <li>En envoyant directement les fichiers extraits de votre logiciel de suivi, au format .xls </li>
+          </ul>
+          <p>
+            Méthode de saisie : menu déroulant avec “Modèle  DREAL, rapports MEAC300 (Sick), rapports WEX (Envea)
+          </p>
+        </p>
+
+        <div class="columns">
+          <div class="column">
+            <h4  class="title is-4">Compteurs</h4>
+
+            {{ form_widget(form.declarationFile) }}
+
+            <p>
+              <a href="{{ url('route_download_template') }}" class="button is-primary">Téléchargez notre modèle pour les compteurs</a>
+            </p>
+          </div>
+          <div class="column">
+            <h4  class="title is-4">Concentration</h4>
+            Second column
+          </div>
+          <div class="column">
+            <h4  class="title is-4">Flux</h4>
+            Third column
+          </div>
+        </div>
+
         <h3 class="title is-3">Remarques</h3>
         {{ form_widget(form.comment) }}<br/>
 
@@ -86,4 +126,4 @@
         {{ form_end(form) }}
     </div>
   </section>
-{% endblock %}
+{% endblock %} 
